--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Speish information app</title>
     <meta charset="utf-8">
-
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="main.css">
     <!-- <script type="module" src="src/index.js"></script> -->
     <script src="dist/main.js"></script>
