--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>Speish information app</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
+    <meta name="theme-color" content="#08525d">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="main.css">
-    <!-- <script type="module" src="src/index.js"></script> -->
     <script src="dist/main.js"></script>
   </head>
 
